--- a/Langchain_prompt_chains_memory.ipynb
+++ b/Langchain_prompt_chains_memory.ipynb
@@ -16,13 +16,13 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "lRlIdxfwzskc"
       },
       "outputs": [],
       "source": [
-        "api_key1=\"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\"\n"
+        "api_key1=\"\"\n"
       ]
     },
     {
@@ -37,7 +37,7 @@
         "id": "D0ebwD1Oz2J_",
         "outputId": "b5544e2b-753f-4a6c-b8f3-1f0d9be0d577"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -123,7 +123,7 @@
         "id": "GnXJdGq90Pol",
         "outputId": "cfb9259b-432c-4b88-ec2e-896eae370ef3"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -198,7 +198,7 @@
       "source": [
         "from langchain.llms import OpenAI\n",
         "import os\n",
-        "os.environ['OPENAI_API_KEY']=\"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\"\n",
+        "os.environ['OPENAI_API_KEY']=\"\"\n",
         "llm = OpenAI(temperature=0.9)  # model_name=\"text-davinci-003\"\n",
         "text = \"What would be a good company name for a company that makes colorful socks?\"\n",
         "print(llm(text))"
@@ -279,8 +279,8 @@
         "from langchain.llms import OpenAI\n",
         "import os\n",
         "\n",
-        "os.environ[\"SERPAPI_API_KEY\"]=\"7ac201f4cae9c07782a539b7b5901933764fd47c6d06cfeb3eee05f3fb727475\"\n",
-        "os.environ[\"OPENAI_API_KEY\"]=\"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\"\n",
+        "os.environ[\"SERPAPI_API_KEY\"]=\"\"\n",
+        "os.environ[\"OPENAI_API_KEY\"]=\"\"\n",
         "\n",
         "llm=OpenAI(temperature=0.1)\n",
         "\n",
@@ -377,8 +377,8 @@
         "from langchain.llms import OpenAI\n",
         "import os\n",
         "\n",
-        "os.environ[\"SERPAPI_API_KEY\"]=\"7ac201f4cae9c07782a539b7b5901933764fd47c6d06cfeb3eee05f3fb727475\"\n",
-        "os.environ[\"OPENAI_API_KEY\"]=\"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\"\n",
+        "os.environ[\"SERPAPI_API_KEY\"]=\"\"\n",
+        "os.environ[\"OPENAI_API_KEY\"]=\"\"\n",
         "\n",
         "llm=OpenAI(temperature=0.1)\n",
         "\n",
@@ -448,7 +448,7 @@
       "metadata": {
         "id": "vMhsuvh41xE5"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -458,7 +458,7 @@
         "from langchain.chains import LLMChain\n",
         "from langchain.llms import OpenAI\n",
         "import os\n",
-        "os.environ['OPENAI_API_KEY']=\"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\"\n",
+        "os.environ['OPENAI_API_KEY']=\"\"\n",
         "llm=OpenAI(temperature=0.1)\n",
         "prompt=PromptTemplate.from_template(\"Best {name} company name in India in terms of Revenue. Provide only Name\")\n",
         "chain=LLMChain(llm=llm,prompt=prompt)\n",
@@ -472,7 +472,7 @@
         "id": "PpBKC9n7FHpw",
         "outputId": "7a929034-f862-4e59-e730-3413589d1d86"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -502,7 +502,7 @@
         "id": "UdDgUPNMHZCx",
         "outputId": "961bd47c-8557-4fcd-af56-59f23f12ec09"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -543,7 +543,7 @@
         "id": "_XhMk3cNISFi",
         "outputId": "8823dbf5-0e02-4053-fc41-23187bde912e"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -593,7 +593,7 @@
         "id": "9rcmXfwmJjpb",
         "outputId": "8172f9e1-aa70-4bdd-e515-14afb3ed17d8"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -617,7 +617,7 @@
       "metadata": {
         "id": "YyGvbGB1KKsd"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -629,7 +629,7 @@
       "metadata": {
         "id": "e6yhHkx2FwDE"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -639,7 +639,7 @@
         "from langchain.chains import LLMChain\n",
         "from langchain.llms import OpenAI\n",
         "import os\n",
-        "os.environ['OPENAI_API_KEY']=\"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\"\n",
+        "os.environ['OPENAI_API_KEY']=\"\"\n",
         "llm=OpenAI(temperature=0.1)\n",
         "prompt=PromptTemplate.from_template(\"Best {name} company name in India in terms of Revenue. Provide only Name\")\n",
         "chain=LLMChain(llm=llm,prompt=prompt)\n",
@@ -653,7 +653,7 @@
         "id": "YpgxFHPaMLlX",
         "outputId": "9fd6f769-8245-48a8-bb0f-9ac9ddafa296"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -673,7 +673,7 @@
         "from langchain.llms import OpenAI\n",
         "import os\n",
         "memory=ConversationBufferMemory()\n",
-        "os.environ['OPENAI_API_KEY']=\"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\"\n",
+        "os.environ['OPENAI_API_KEY']=\"\"\n",
         "llm=OpenAI(temperature=0.1)\n",
         "prompt=PromptTemplate.from_template(\"Best {name} company name in India in terms of Revenue. Provide only Name\")\n",
         "chain=LLMChain(llm=llm,prompt=prompt,memory=memory)\n",
@@ -688,7 +688,7 @@
         "id": "1DW2OrP4GO2a",
         "outputId": "2a4b1102-39dc-4d8e-ec12-547edc30e2cc"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -715,7 +715,7 @@
         "from langchain.llms import OpenAI\n",
         "import os\n",
         "memory=ConversationBufferWindowMemory(k=1)\n",
-        "os.environ['OPENAI_API_KEY']=\"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\"\n",
+        "os.environ['OPENAI_API_KEY']=\"\"\n",
         "llm=OpenAI(temperature=0.1)\n",
         "prompt=PromptTemplate.from_template(\"Best {name} company name in India in terms of Revenue. Provide only Name\")\n",
         "chain=LLMChain(llm=llm,prompt=prompt,memory=memory)\n",
@@ -730,7 +730,7 @@
         "id": "BrwVgdk8HASh",
         "outputId": "e8ea4a9a-213a-4300-f809-6894e9c47553"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
